<resources>
    <string name="app_name">Laza</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="wishlist">WishList</string>
    <string name="payment">Payment</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

    <string name="todo">TODO</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test2">TestActivity2</string>
    <string name="hello">Hello</string>
    <string name="welcome_to_laza">Welcome to laza</string>
    <string name="search">Search</string>
    <string name="choose_brand">Choose Brand</string>
    <string name="view_all">View All</string>
    <string name="new_arrival">New Arrival</string>
    <string name="size">Size</string>
    <string name="size_guide">Size Guide</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="reviews">Reviews</string>
    <string name="rating">rating</string>
    <string name="add_to_chart">Add to Chart</string>
    <string name="total_price">Total Price</string>
    <string name="with_vat_sd">with VAT,SD</string>
    <string name="add_review">Add Review</string>
    <string name="name">Name</string>
    <string name="enter_your_name">Type your name</string>
    <string name="how_was_your_experience">How was your experience ?</string>
    <string name="describe_your_experience">Describe your experience?</string>
    <string name="star">Star</string>
    <string name="submit_review">Submit Review</string>
    <string name="_5_0">5.0</string>
    <string name="_0_0">0.0</string>
    <string name="visa_classic">Visa Classic</string>
    <string name="stars_digits">****</string>
    <string name="add_new_card">Add New Card</string>
    <string name="card_owner">Card Owner</string>
    <string name="card_number">Card Number</string>
    <string name="type_card_owner">Type card owner</string>
    <string name="type_card_number">Type card number</string>
    <string name="exp">EXP</string>
    <string name="_11_26">11/26</string>
    <string name="cvv">CVV</string>
    <string name="_7763">7763</string>
    <string name="save_card_info">Save card info</string>
    <string name="save_card">Save Card</string>
    <string name="add_card">Add Card</string>
    <string name="items">Items</string>
    <string name="in_wishlist">In wishlist</string>
    <string name="edit">Edit</string>
    <string name="available_in_stock">Available in stock</string>
    <string name="sort">Sort</string>
    <string name="identity_type_fragment">Identity Type</string>
    <string name="account_creation_chooser">Create Account</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="account_info">Account Information</string>
    <string name="password">Password</string>
    <string name="order">Order</string>
    <string name="cards">My Cards</string>
    <string name="logout">Logout</string>
    <string name="splash">Splash</string>
    <string name="create_an_account">Create an Account</string>
    <string name="already_have_an_account">Already have an account? </string>
    <string name="sign_in">Sign in</string>
    <string name="google">Google</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="let_s_get_started">Let’s Get Started</string>
    <string name="welcome">Welcome</string>
    <string name="please_enter_your_data_to_continue">Please enter your data to continue</string>
    <string name="username">Username</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember me</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="sign_up">Sign Up</string>
    <string name="by_connecting_your_account_confirm">By connecting your account confirm that you agree with our Terms and Conditions</string>
    <string name="please_write_your_email_to_receive_a_confirmation_code_to_set_a_new_password">Please write your email to receive a confirmation code to set a new password.</string>
    <string name="confirm_email">Confirm Email</string>
    <string name="verification_code">Verification Code</string>
    <string name="resend_verification_code">Resend verification code</string>
    <string name="confirm_code">Confirm Code</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="please_write_your_new_password">Please write your new password</string>
    <string name="new_password">New Password</string>
    <string name="cart">Cart</string>
    <string name="ahmed_habib">Ahmed Habib</string>
    <string name="account_verified">Account Verified</string>
    <string name="account_information">Account Information</string>
    <string name="men_s_printed_pullover_hoodie">Men\'s Printed Pullover Hoodie</string>
    <string name="brand">brand</string>
    <string name="master_card_classic">Master card classic</string>
    <string name="delivery_address">Delivery Address</string>
    <string name="checkout">Checkout</string>
    <string name="chhatak_sunamgonj_12_8ab">Chhatak, Sunamgonj 12/8AB</string>
    <string name="payment_method">Payment Method</string>
    <string name="_3456">**** 3456</string>
    <string name="order_info">Order Info</string>
    <string name="subtotal">Subtotal</string>
    <string name="_110">$110</string>
    <string name="shipping_cost">Shipping Cost</string>
    <string name="_10">$10</string>
    <string name="total">Total</string>
    <string name="_120">$120</string>
    <string name="sylhet">Sylhet</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="order_confirmed">Order Confirmed!</string>
    <string name="your_order_has_been_confirmed_we_will_send_you_confirmation_email_shortly">Your order has been confirmed, we will send you confirmation email shortly.</string>
    <string name="empty_username">User name is required!</string>
    <string name="empty_password">Password is required!</string>
    <string name="username_and_password_empty">User name and password are required!</string>
    <string name="email_empty">Email is required!</string>
    <string name="username_and_password_and_email_empty">User name and email and password are reqired!</string>
    <string name="invalid_email">Invalid email!</string>
    <string name="invalid_otp">Invalid OTP!</string>
    <string name="pass_new_pass_not_match">Password and new password are\'t matched!</string>
    <string name="invalid_pass">Invalid password!</string>
</resources>